--- a/bibliography.bib
+++ b/bibliography.bib
@@ -455,11 +455,12 @@ year = {2015}
   publisher={Elsevier}
 }
 
-@article{muller2007documentation,
+@inproceedings{muller2007documentation,
   title={Documentation mocap database hdm05},
   author={M{\"u}ller, Meinard and R{\"o}der, Tido and Clausen, Michael and Eberhardt, Bernhard and Kr{\"u}ger, Bj{\"o}rn and Weber, Andreas},
   year={2007},
-  publisher={Citeseer}
+  publisher={Citeseer},
+  booktitle={Proc. Australasian Conference on Robotics and Automation}
 }
 
 @inproceedings{stanton2012teleoperation,
